backend-service.yaml
# check if there is at least one published port

#! backend-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: backend-published
    namespace: agricultural-ai-backend
spec:
    type: LoadBalancer

# check if there is at least one published port
