agri_network-network-policy.yaml
#! agri_network-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: agri-network-network-policy
    namespace: agricultural-ai-backend
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.agri_network: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.agri_network: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.agri_network: "true"
